--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Project/HybridCLRData/StrippedAOTDllsTempProj
 /Project/HybridCLRData/AssembliesPostIl2CppStrip
 /Project/HybridCLRData/HotUpdateDlls
+/Project/HybridCLRData
