--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Project/HybridCLRData/AssembliesPostIl2CppStrip
 /Project/HybridCLRData/HotUpdateDlls
 /Project/HybridCLRData
+/Project/.idea
+/Project/obj
